// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Horloge on large screen, i.e. >= 600px renders correctly 1`] = `
<DocumentFragment>
  <code
    class="makeStyles-time-1 makeStyles-time-3"
  >
    <span
      class="makeStyles-hours-2"
    >
      00
    </span>
    :00
  </code>
</DocumentFragment>
`;

exports[`Horloge on small screen, i.e. < 600px renders correctly 1`] = `
<DocumentFragment>
  <code
    class="makeStyles-time-4 makeStyles-time-6"
  >
    <span
      class="makeStyles-hours-5"
    >
      00
    </span>
    :00
  </code>
</DocumentFragment>
`;
